# tactility-enhanced-t-deck

./: README.md
Apps/UartRelay/: CMakeLists.txt  IMPLEMENTATION_PLAN.md  README.md
Apps/UartRelay/.tactility/: sdk.json
Apps/UartRelay/main/: CMakeLists.txt
Apps/UartRelay/main/Source/: ConnectView.h  ConsoleView.h  ConsoleView.h.backup  UartRelay.cpp  UartRelay.h  View.h  main.cpp
Prebuilt/Apps/UartRelay/: UartRelay.elf  manifest.properties
Prebuilt/SDCard/: README.md
TactilityC/Source/: tt_init.cpp
TactilityCore/Include/Tactility/: Lock.h
releases/v0.1.0-trackball-complete/: FLASH_INSTRUCTIONS.md
